# MNIST-From-Scratch

./: .clang-format  CMakeLists.txt  main-letters.cpp  main-linear-regression.cpp  main.cpp  save-file-linear.txt  save-file.txt
libs/data_loader/: data_loader.cpp  data_loader.h
libs/image/: character.cpp  character.h  image.cpp  image.h  image_reversed.cpp  image_reversed.h  linear.cpp  linear.h
libs/learn/: calculate_individual_old.cpp  learn.cpp  learn.h  learn_new.cpp  learn_new.h
libs/linalg/: linalg.cpp  linalg.h
